--- a/public/who.html
+++ b/public/who.html
@@ -1,1 +1,59 @@
-<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="Evolution Coaching official website."><meta name="author" content="Andrei Constantinescu"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet"><title>Evolution Coaching</title><link rel='stylesheet' href='css/build.adc3ac7b2648bea819ff721665ecd406.css' /></head><body><div id="navbar"></div><div id="content"><div class="title who"><span><span><div class="fr">Qui sommes nous</div><div class="en">Who are we?</div></span></span></div><div class="description"><div class="text"><div class="fr">Evolution Coaching est une plateforme de coaches:</div><div class="en">Evolution coaching is led by Anne Roques:</div></div><div class="list"><ul><li> <div class="fr">Nous sommes bilingues Français/Anglais et multicullturels, ayant vécus et travaillés en dehors de notre pays d’origine pendant plusieurs années. Nous coachons souvent en Français et en Anglais dans des contextes globaux et interculturels</div><div class="en">We are bilingual English-French and multicultural having lived and worked outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context</div></li><li> <div class="fr">Nous avons un solide passé dans le business dans divers secteurs, ce qui veut dire que nous comprenons le territoire - souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   </div><div class="en">We have strong business backgrounds across multiple sectors, which means that we understand the territory - often characterised by complexity, pressure and fast-pace</div></li><li> <div class="fr">Nous démontrons et pratiquons l’agilité et la rigueur à travers un style de questionnement minimaliste, cela permet aux clients de trouver leurs propres solutions et les incitent à réagir et agir</div><div class="en">We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions are empowered to take action</div></li><li> <div class="fr">Avec plus de 18 ans d'expérience dans le contexte internationale de business, c'est une master coach professionnel qualifiée du International Coach Fédération (ICF) et un membre associé de la Société Française de Coaching</div><div class="en">With over 18 years in international business, she is a professional certified master coach with International Coach Federation (ICF) and an Associate Member of the French Society of Coaching. She is a Master Practitioner in NeuroLinguistic Programming (NLP) and a Clean Language facilitator</div></li><li> <div class="fr">Elle est maître praticien en programmation NeuroLinguistic (NLP) et une facilitatrice de Clean Language</div><div class="en">Anne is also an accredited supervisor for coaches certified with Coaching Supervision Academy (2009) and the Association of Coaching Supervisors (2011).</div></li><li> <div class="fr">Anne est aussi une superviseure pour Coaching Supervision Academy (2009) et l'Association of Coaching Supervisors (2011)</div><div class="en">She was certified to use the HoganLead Assessment tool (2012)</div></li><li> <div class="fr">Elle est diplômée pour utiliser l’outil HoganLead Assessment, accréditée pour gérer les conflits et certifiée facilitatrice en systémique organisationnelle</div><div class="en">She is a workplace mediator et and an accredited systemic facilitator</div></li></ul></div></div><div class="who-image"><img src="img/photo-1.png"></div><div class="footer"></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script src="js/templates.js"></script><script src='js/build.785eea238b9f7ac871003ae587c4c17d.js'></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="description" content="Evolution Coaching official website.">
+    <meta name="author" content="Andrei Constantinescu">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+    <title>Evolution Coaching</title><link rel='stylesheet' href='css/master.css' />
+<link rel='stylesheet' href='css/navbar.css' />
+<link rel='stylesheet' href='css/pages.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap-theme.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap.css' />
+  </head>
+  <body>
+    <div id="navbar"></div>
+    <div id="content">
+      <div class="title who"><span><span>
+            <div class="fr">Qui sommes nous</div>
+            <div class="en">Who are we?</div></span></span></div>
+      <div class="description">
+        <div class="text">
+          <div class="fr">Evolution Coaching est une plateforme de coaches  piloté par Anne Roques:</div>
+          <div class="en">Evolution Coaching is led by Anne Roques:</div>
+        </div>
+        <div class="list">
+          <ul>
+            <li> 
+              <div class="fr">Bilingues Français/Anglais et multiculturels, nous avons vécus et travaillés hors de notre pays d’origine depuis de nombreuses  pannées. Nos coachings se déroulent souvent  en Français et en Anglais dans des contextes interculturels spécifiques ou globalisés</div>
+              <div class="en">We are bilingual English-French and multicultural having lived and worked outside of our country of origin for many years. We often coach in both French and English where issues touch on matters of cultural identity or context</div>
+            </li>
+            <li> 
+              <div class="fr">Un solide arrière-plan et de nombreuses références dans divers secteurs nous  assurent une bonne compréhension du  territoire de nos interlocuteurs –territoire  souvent caractérisé par la complexité, la pression et le besoin de réactivité face aux changements   </div>
+              <div class="en">We have strong business backgrounds across multiple sectors, which means that we understand our clients territory - often characterised by complexity, pressure and fast-pace</div>
+            </li>
+            <li> 
+              <div class="fr">A travers un style de questionnement  minimaliste, permettant à nos clients de trouver leurs propres solutions et ainsi d’agir et de réagir, nous vous accompagnons avec souplesse, doigté et rigueur </div>
+              <div class="en">We demonstrate and practice agility and rigor through a minimalist questioning style, this means clients find their own solutions and thus empowered to take action</div>
+            </li>
+            <li> 
+              <div class="fr">Avec plus de 18 ans d’expériences dans des groupes internationaux, mon métier  coach réside aujourd’hui dans le savoir être. Une priorité,   et une démarche centrée sur le  COMMENT faire plutôt que sur le QUOI fair.</div>
+              <div class="en">With over 18 years in international business, the focus point at the heart of my professional involvement leads me to concentrate my work on the HOW to make things happen rather that WHAT  to do </div>
+            </li>
+            <li> 
+              <div class="fr">Mon parcours professionnel, comme mon cheminement personnel, sont marqués d’influences diverses, de rencontres, de formations, de moments d’inspirations mais aussi de prises de recul et d’espaces de développement</div>
+              <div class="en">My on going journey, both professionally and personally, has been influences by meeting outstanding individual s- whether trainers or inspirational speakers – and by times of personal development when standing back to reflect is also a must</div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="who-image"><img src="img/photo-1.png"></div>
+      <div class="footer"></div>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/templates.js"></script><script src='js/main.js'></script>
+<script src='js/vendor/1-jquery-1.12.4.min.js'></script>
+  </body>
+</html>
