--- a/public/how.html
+++ b/public/how.html
@@ -1,1 +1,99 @@
-<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="Evolution Coaching official website."><meta name="author" content="Andrei Constantinescu"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet"><title>Evolution Coaching</title><link rel='stylesheet' href='css/build.cef6ea9fa875099467b366d81a9b93c7.css' /></head><body><div id="navbar"></div><div id="content"><div class="title how"><span><span><div class="fr">Comment le faisons?</div><div class="en">How do we do it?</div></span></span></div><div class="description"><div class="item"><div class="mini-desc"><div class="mini-desc-content"><div class="mini-title how"><div class="fr">Co-création</div><div class="en">Co-creation</div></div><p> <div class="fr">Evolution Coaching est unique dans son engagement vis à vis  de  la Co création.</div><div class="en">Evolution Coaching is unique in its commitment to co-creation.</div></p><p><div class="fr">En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes,  c’est un dialogue constructif qui s’établit pour mieux répondre à des besoins changeants.</div><div class="en">In providing broad perspectives and working closely with all stakeholders a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives</div></p></div><div class="mini-desc-img"><img src="img/header icons/co-creation-icon.svg"></div></div></div><div class="item"><div class="mini-desc"><div class="mini-desc-img second"><img src="img/header icons/stop-look-listen-icon.svg"></div><div class="mini-desc-content"><div class="mini-title how center"><div class="fr">Arrêt, observation, écoute</div><div class="en">Stop, look, listen</div></div><p> <div class="fr">Nous créons un environnement où le client peut s’arrêter, observer et écouter. En toute confidentialité, celui ci peut être amener à s’aligner avec son soi intérieur afin d’être  mieux à l’écoute de son identité.</div><div class="en">We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenged to become tuned in to their inner-self and to be aligned with their identity. This process created transformational change .</div></p></div><div class="mini-desc-img second-mobile"><img src="img/header icons/stop-look-listen-icon.svg"></div></div></div><div class="item"><div class="mini-desc"><div class="mini-desc-content"><div class="mini-title how"><div class="fr">Connaissance de soi</div><div class="en">Self-awareness</div></div><p> <div class="fr">A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté et de l’énergie. Accepter sa personne (s’approprier son style de leadership, permettent d’évoluer en tant qu’être humain et leader.</div><div class="en">Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energises. A purposeful outcome is identified and provides a roadmap for on-going development. </div></p></div><div class="mini-desc-img"><img src="img/header icons/self-awareness-icon.svg"></div></div></div><div class="item"><div class="mini-desc"><div class="mini-desc-img second"><img src="img/header icons/supervision-icon.svg"></div><div class="mini-desc-content"><div class="mini-title how center"><div class="fr">Supervision</div><div class="en">Supervision</div></div><p><div class="fr">A travers le processus de supervision des observations significatives émergent..</div><div class="en">Through the supervision process, meaningful observations are offered in an elegant and respectful manner in order to better serve the final corporate client </div></p><p><div class="fr">Anne et tous les coaches de la plateforme sont en supervision de manière régulière et fréquente (en groupe et/ou individuellement).</div><div class="en">She and all the Evolution Coaches are in regular group and individual supervision.</div></p></div><div class="mini-desc-img second-mobile"><img src="img/header icons/supervision-icon.svg"></div></div></div></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script src="js/templates.js"></script><script src='js/build.785eea238b9f7ac871003ae587c4c17d.js'></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="description" content="Evolution Coaching official website.">
+    <meta name="author" content="Andrei Constantinescu">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+    <title>Evolution Coaching</title><link rel='stylesheet' href='css/master.css' />
+<link rel='stylesheet' href='css/navbar.css' />
+<link rel='stylesheet' href='css/pages.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap-theme.css' />
+<link rel='stylesheet' href='css/vendor/bootstrap.css' />
+  </head>
+  <body>
+    <div id="navbar"></div>
+    <div id="content">
+      <div class="title how"><span><span>
+            <div class="fr">Comment le faisons nous?</div>
+            <div class="en">How do we do it?</div></span></span></div>
+      <div class="description">
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-content">
+              <div class="mini-title how">
+                <div class="fr">Co-création</div>
+                <div class="en">Co-creation</div>
+              </div>
+              <p> 
+                <div class="fr">Evolution Coaching est unique dans son engagement vis à vis  de  la Co création.</div>
+                <div class="en">Evolution Coaching is unique in its commitment to co-creation.</div>
+              </p>
+              <p>
+                <div class="fr">En fournissant une variété de perspectives et en travaillant minutieusement avec toutes les parties prenantes,  c’est un dialogue constructif qui s’établit pour mieux répondre à des besoins changeants.</div>
+                <div class="en">In providing broad perspectives and working closely with all stakeholders, a dynamic, flexible and generative dialogue evolves to meet the changing needs of business, the leadership team and senior executives</div>
+              </p>
+            </div>
+            <div class="mini-desc-img"><img src="img/header icons/co-creation-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-img second"><img src="img/header icons/stop-look-listen-icon.svg"></div>
+            <div class="mini-desc-content">
+              <div class="mini-title how center">
+                <div class="fr">Arrêt, observation, écoute</div>
+                <div class="en">Stop, look, listen</div>
+              </div>
+              <p> 
+                <div class="fr">Nous créons un environnement où le client peut s’arrêter, observer et écouter. En toute confidentialité, celui ci peut être amener à s’aligner avec son soi intérieur afin d’être  mieux à l’écoute de son identité.</div>
+                <div class="en">We create an environment where the client can 'stop, look and listen'. Providing respect and confidentiality, clients are often challenged to become tuned in to their inner-self and to be aligned with their identity. This process created transformational change .</div>
+              </p>
+            </div>
+            <div class="mini-desc-img second-mobile"><img src="img/header icons/stop-look-listen-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-content">
+              <div class="mini-title how">
+                <div class="fr">Connaissance de soi</div>
+                <div class="en">Self-awareness</div>
+              </div>
+              <p> 
+                <div class="fr">A travers le processus de coaching, une meilleure connaissance de soi émerge. Cela donne  de la clarté et de l’énergie. Accepter sa personne s’approprier son style de leadership, permettent d’évoluer en tant qu’être humain et leader.</div>
+                <div class="en">Through the coaching process, self-awareness emerges. This provides for clarity, which in turn energises. A purposeful outcome is identified and provides a roadmap for on-going development. </div>
+              </p>
+            </div>
+            <div class="mini-desc-img"><img src="img/header icons/self-awareness-icon.svg"></div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="mini-desc">
+            <div class="mini-desc-img second"><img src="img/header icons/supervision-icon.svg"></div>
+            <div class="mini-desc-content">
+              <div class="mini-title how center">
+                <div class="fr">Supervision</div>
+                <div class="en">Supervision</div>
+              </div>
+              <p>
+                <div class="fr">A travers le processus de supervision des observations significatives emergent..</div>
+                <div class="en">Through the supervision process, meaningful observations are offered in an elegant and respectful manner in order to better serve the final corporate client </div>
+              </p>
+              <p>
+                <div class="fr">Anne et tous les coaches de la plateforme sont en supervision de manière régulière et fréquente (en groupe et/ou individuellement).</div>
+                <div class="en">She and all the Evolution Coaches are in regular group and individual supervision.</div>
+              </p>
+            </div>
+            <div class="mini-desc-img second-mobile"><img src="img/header icons/supervision-icon.svg"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="js/templates.js"></script><script src='js/main.js'></script>
+<script src='js/vendor/1-jquery-1.12.4.min.js'></script>
+  </body>
+</html>
