--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-    <meta name="description" content="Evolution Coaching official website.">
-    <meta name="author" content="Andrei Constantinescu">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
-    <title>Evolution Coaching</title><link rel='stylesheet' href='css/master.css' />
-<link rel='stylesheet' href='css/navbar.css' />
-<link rel='stylesheet' href='css/pages.css' />
-<link rel='stylesheet' href='css/vendor/bootstrap-theme.css' />
-<link rel='stylesheet' href='css/vendor/bootstrap.css' />
-  </head>
-  <body>
-    <div id="navbar"></div>
-    <div id="content">
-      <div class="home-video">
-        <video controls>
-          <source src="videos/video.mp4" type="video/mp4">
-        </video>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="js/templates.js"></script><script src='js/main.js'></script>
-<script src='js/vendor/1-jquery-1.12.4.min.js'></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf8"><meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"><meta name="description" content="Evolution Coaching official website."><meta name="author" content="Andrei Constantinescu"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet"><title>Evolution Coaching</title><link rel='stylesheet' href='css/build.af61ecd61c01dbafd8f478dc70dd356a.css' /></head><body><div id="navbar"></div><div id="content"><div class="home-video"><video controls><source src="videos/video.mp4" type="video/mp4"></video></div></div><script src="https://code.jquery.com/jquery-2.2.4.min.js"></script><script src="js/templates.js"></script><script src='js/build.881a7e9324b6a7bc420893e48cd6c672.js'></script></body></html>
